Fix styles of buttons on ios

--- a/app/app.scss
+++ b/app/app.scss
@@ -10,15 +10,6 @@ body, h1, h2, h3, h4, h5, h6, input, button, select, textarea {
     text-align: center;
 }
 
-.ur-font-color {
-    color: #17909c;
-}
-
-.ur-bg-color {
-    background-color: #17909c;
-}
-
-
 /*-----------------
     icons
 -------------------*/
