--- a/app/pages/chat/chat.scss
+++ b/app/pages/chat/chat.scss
@@ -4,10 +4,7 @@
         border: none;
     }
     .toolbar {
-        padding: 0;
-        .bar-button {
-            // color: #17909c;
-        }
+        padding: 0;      
         .right {
             float: right;
             ion-icon {
