--- a/app/pages/contacts-and-chats/contacts-and-chats.scss
+++ b/app/pages/contacts-and-chats/contacts-and-chats.scss
@@ -12,10 +12,7 @@
     .right {
       float: right;
 
-      ion-icon {
-        color: #17909c;
-        font-weight: bold;
-      }
+
     }
   }
 }
