--- a/app/pages/home/home.scss
+++ b/app/pages/home/home.scss
@@ -300,12 +300,12 @@
 .events-list .item h2{
     margin-top: 0px;
     margin-bottom: 0px;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     color: #546a79;
 }
 
 .events-list .item p {
-    font-size: 1.5rem;
+    font-size: 1.35rem;
     color: #98a6af;
 }
 
@@ -313,9 +313,9 @@
     position: absolute;
     top: 40px;
     right: 0px;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 
 .events-list .columnMessage {
-    width: 80%;
+    width: 100%;
 }
