--- a/app/pages/request/request.scss
+++ b/app/pages/request/request.scss
@@ -1,26 +1,6 @@
 .request-page {
     background: rgba(235, 63, 151, 1) url("../../img/img-bg.png") no-repeat 0 0;
-    .toolbar-background {
-        background-color: transparent;
-        border: none;
-        background: none;
-    }
-    .toolbar {
-        .bar-button {
-            color: #17909c;            
-        }
-        .right {
-            float: right;
-            ion-icon {
-                color: #444;
-                font-weight: bold;
-            }
-        }
-        .toolbar-title {
-            color: #555;
-            font-weight: normal;
-        }
-    }
+  
 }
 
 .dash-request-view {
