--- a/app/pages/send/send.scss
+++ b/app/pages/send/send.scss
@@ -1,26 +1,5 @@
 .send-page {
-  .toolbar-background {
-    background: #fff;
-    border-color: #fff;
-  }
-  .toolbar {
-    padding: 0;
-    .bar-button {
-      color: #17909c;
-      font-size: 16px;
-    }
-    .button-icon-only {
-      color: #17909c;
-      font-size: 16px;
-    }
-    .right {
-      float: right;
-      ion-icon {
-        color: #17909c;
-        font-weight: bold;
-      }
-    }
-  }
+
 }
 .inputDisabled {
   border: none;
