--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -25,5 +25,3 @@ $text-input-md-show-focus-highlight: false;
 $select-ios-padding-left: 0px;
 $select-md-padding-left: 8px;
 $toolbar-md-button-color: color($colors, primary);
-$toolbar-md-button-font-size: 1.6rem;
-$toolbar-ios-button-font-size: 1.9rem;
